# TRINITYIDAIOS

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  ADDIECRAPEYE_CANONICAL.md  ASK_PETE_FIELD_MANUAL.md  CONTEXT.md  Cargo.toml  Dockerfile.sglang  EMAIL_DRAFT.md  FORGE_ATTRIBUTION.md  HOOK_BOOK.md  HOW_TO_USE_TRINITY.md  INSTALL.md  LDT_CAPSTONE_MATURITY_MAP.md  LICENSE  LONGCAT_AMD_STRIX_HARDWARE_REPORT.md  MATURATION_MAP.md  PLAYERS_HANDBOOK.md  PROFESSOR.md  PROFESSOR_SUMMARY.md  README.md  SESSION_TURNOVER.md  TASK_QUEUE.md  TRINITY_FANCY_BIBLE.md  TRINITY_ID_AI_OS_FULL_REVIEW.md  TRINITY_RED_HAT_EDGE_MASTER_REPORT_2026-03-24.md  TRINITY_SYLLABUS.md  Trunk.toml  clippy.toml  context.md  docker-compose.sglang.yml  docker-compose.vllm.yml  docker-compose.yml  find_huge_model.py  mock_hunyuan.py  nohup.out  package-lock.json  patch_configs.py  record_voice.sh  (+8 more)
.sqlx/: query-0706ddcf0c48e0f5092e7d5ffb4340b845951d3362419c151889e66f486dd0f8.json  query-08d5efb72c32ccf5214d4c7fbd02dfe17c8da8218c87c057cfd89ffb011caacc.json  query-0d0e2d9e57e4c8c91acb8a26acdf462aef1c84a29ba43e91cbd2e24728dfc7f2.json  query-10f3ffe6628fd6fbf29397ad18abccc13e898b931b489a2fea79d2524188789f.json  query-63366c987bcf2e6cc1fdd288996cdf9ef212dce8caaf7e978a3b91ef0dcec357.json  (+11 more)
.windsurf/: mcp_config.json
_agent/: tier3_plan.md
crates/trinity/: Cargo.toml  TASK_QUEUE.md  tauri.conf.json
crates/trinity-bevy-graphics/: Cargo.toml
crates/trinity-bevy-graphics/src/: addiecrapeye.rs  art_panels.rs  bridge.rs  creative_bridge.rs  daydream.rs  daydream_commands.rs  lib.rs  meshes.rs  vision.rs
crates/trinity-bevy-graphics/src/generators/: mod.rs
crates/trinity-daydream/: Cargo.toml
crates/trinity-daydream/src/: addiecrapeye.rs  art_panels.rs  avatar.rs  bridge_client.rs  creative_bridge.rs  daydream.rs  hud.rs  iron_road_ui.rs  lib.rs  party_bridge.rs  python_bridge.rs  sao_menu.rs  spatial_ui.rs  train_car.rs  vision.rs  voice_bridge.rs  xr_shell.rs  yardmaster_ui.rs
crates/trinity-daydream/src/materials/: mod.rs
crates/trinity-daydream/src/shaders/: mod.rs
crates/trinity-iron-road/: Cargo.toml
crates/trinity-iron-road/src/: book.rs  crate_manual.rs  game_loop.rs  great_recycler.rs  lib.rs  narrative.rs  pete_core.rs
crates/trinity-iron-road/src/vaam/: cognitive_load.rs  litrpg.rs  madlibs.rs  mod.rs
crates/trinity-mcp-server/: Cargo.toml
crates/trinity-mcp-server/examples/: mcp_client.rs
crates/trinity-mcp-server/src/: autopoietic.rs  cross_dataset.rs  embeddings.rs  lib.rs  main.rs  pedagogical_schema.rs  quest_context.rs  self_work.rs
crates/trinity-protocol/: AGENT_MEMORY_SPECIFICATIONS.md  Cargo.toml
crates/trinity-protocol/examples/: process_todos.rs  verify_rpc.rs
crates/trinity-protocol/src/: agents.rs  artifact.rs  asset_generation.rs  brain.rs  bridge.rs  character_sheet.rs  crate_manual.rs  daydream_commands.rs  diffusion.rs  id_contract.rs  lib.rs  memory.rs  memory_bridge.rs  ontology.rs  pearl.rs  production.rs  profile.rs  qm_rubric.rs  sacred_circuitry.rs  semantic_creep.rs  sidecars.rs  state.rs  stream.rs  task.rs  trinity_mcp_server.rs  tutorial_events.rs  types.rs  vaam_profile.rs  vocabulary.rs  yardmaster_generator.rs
crates/trinity-protocol/tests/: code_generation.rs  rpc_flow.rs
crates/trinity-quest/: Cargo.toml
crates/trinity-quest/src/: crate_manual.rs  hero.rs  lib.rs  objectives.json  party.rs  quest_system.rs  state.rs
crates/trinity-sidecar/: Cargo.toml  README.md  mini_bible_engineer.md
crates/trinity-sidecar/src/: api.rs  comfyui.rs  cow_catcher.rs  lib.rs  llama.rs  main.rs  prompts.rs  quest.rs  roles.rs  workflow.rs
crates/trinity-sidecar/tests/: timeout_integration_test.rs
crates/trinity-voice/: Cargo.toml
crates/trinity-voice/src/: audio.rs  crate_manual.rs  lib.rs  personaplex.rs  ssml.rs  tts.rs
crates/trinity/crates/trinity_bevy_ui_test/: Cargo.toml
crates/trinity/crates/trinity_bevy_ui_test/src/: game.rs  main.rs
crates/trinity/examples/: test_load.rs
crates/trinity/frontend/: index.html  package-lock.json  package.json  vite.config.js
crates/trinity/frontend/public/docs/: PLAYERS_HANDBOOK.md
crates/trinity/frontend/public/forge/: index.html
crates/trinity/frontend/public/forge/engine-pkg-webgl2/: forge_engine.d.ts  forge_engine.js  forge_engine_bg.wasm.d.ts
crates/trinity/frontend/src/: App.jsx  main.jsx
crates/trinity/frontend/src/components/: ActivityBar.jsx  ArtStudio.jsx  ArtStudio.test.jsx  ChapterRail.jsx  CharacterSheet.jsx  ChariotViewer.jsx  CreepCard.jsx  ExpressWizard.jsx  FieldManualViewer.jsx  GameHUD.jsx  GlobalDeckOverlay.jsx  InferenceManager.jsx  JournalViewer.jsx  MicButton.jsx  NavBar.jsx  OnboardingTour.jsx  PearlCard.jsx  PerspectiveSidebar.jsx  PhaseWorkspace.jsx  PlayerHandbookElearning.jsx  PortfolioView.jsx  QualityScorecard.jsx  ScopeCard.jsx  SetupWizard.jsx  TrainStatus.jsx  Yardmaster.jsx  ZenMode.jsx
crates/trinity/frontend/src/hooks/: activityBus.js  useBestiary.js  useCreative.js  usePearl.js  useQuest.js  useSSE.js  useYardmaster.js
crates/trinity/frontend/src/styles/: art_studio_premium.css  book.css  chariot.css  hook_deck.css  inference_manager.css  tokens.css  yardmaster_premium.css  zen.css
crates/trinity/frontend/src/tests/: Yardmaster.test.jsx
crates/trinity/frontend/src/utils/: api.js
crates/trinity/src/: agent.rs  authenticity_scorecard.rs  beast_logger.rs  character_api.rs  character_sheet.rs  conductor_leader.rs  cow_catcher.rs  creative.rs  edge_guard.rs  embedded_inference.rs  export.rs  eye_container.rs  gpu_guard.rs  health.rs  hotel_manager.rs  http.rs  inference.rs  inference_router.rs  jobs.rs  journal.rs  lib.rs  main.rs  music_streamer.rs  narrative.rs  npu_ort_engine.rs  persistence.rs  perspective.rs  pete_engine.rs  quality_scorecard.rs  quests.rs  rag.rs  rlhf_api.rs  rlhf_ui.rs  scope_creep.rs  sdxl_native.rs  sidecar_monitor.rs  skills.rs  stt.rs  supertonic.rs  telephone.rs  (+7 more)
crates/trinity/static/: index.html
crates/trinity/tests/: stability_test.rs  template_validation.rs
templates/first-game/: Cargo.toml  README.md
(+493 files in other folders)
