[workspace]
members = [
    # ── Core System ──
    "crates/trinity",                  # Headless HTTP server + Tauri host (Layer 1)
    "crates/trinity-protocol",         # Shared types, ADDIE enums, CharacterSheet (Layer 2)

    # ── Game Engine ──
    "crates/trinity-quest",            # Quest board, XP/Coal/Steam economy
    "crates/trinity-iron-road",        # Book writing, narrative, VAAM, bestiary
    "crates/trinity-voice",            # Supertonic TTS, SSML, VAAM vocal emphasis

    # ── Native Extensions ──
    "crates/trinity-daydream",         # Bevy 0.18.1 3D LitRPG / XR Studio (Layer 3)
    "crates/trinity-mcp-server",       # Model Context Protocol for IDE integration
]

exclude = [
    "plugins/*",                     # WASM plugins compiled separately
    "crates/archive/*",              # Archived legacy crates
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Joshua42atkinson/TRINITYIDAIOS"
authors = ["Joshua Atkinson"]

[workspace.dependencies]
# Async
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ECS & Game Engine
bevy = { version = "0.18.1", default-features = false, features = ["bevy_state", "bevy_pbr", "bevy_sprite", "bevy_render", "bevy_core_pipeline", "bevy_asset", "bevy_scene", "bevy_text", "bevy_window", "bevy_winit", "bevy_log", "bevy_mesh", "multi_threaded", "bevy_ui"] }
bevy_rapier3d = { version = "0.33", default-features = false, features = ["dim3", "async-collider", "debug-render-3d"] }
bevy_panorbit_camera = { version = "0.34", default-features = false }
noise = { version = "0.9", default-features = false }
image = "0.25"
bincode = "1.3"

# XR / OpenXR (used by trinity-daydream with feature "xr")
bevy_mod_xr = { version = "0.5", default-features = false }
bevy_mod_openxr = { version = "0.5", default-features = false }

# Selective save/load (used by trinity-daydream with feature "save")
moonshine-save = { version = "0.4", default-features = false }

# RPC
tarpc = { version = "0.35", features = ["tokio1", "serde-transport", "serde-transport-bincode"] }

# Testing
tokio-test = "0.4"
pulldown-cmark = "0.9"
rodio = "0.17"
cpal = "0.15"

