[package]
name = "trinity-mcp-server"
version = "0.1.0"
edition = "2021"
default-run = "trinity-mcp-server"

[dependencies]
# MCP Protocol
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
ignore = "0.4"

# Embeddings
rust-bert = "0.23"
console = { version = "0.16.2", features = ["std"] }
