[package]
name = "trinity-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Trinity Sidecar — P-ART-Y Party System (Conductor, Artist, Engineer)"

[lib]
name = "trinity_sidecar"
path = "src/lib.rs"

[dependencies]
# HTTP API (same version as trinity-server)
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# HTTP client for llama-server instances
reqwest = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Trinity crates
trinity-comfy = { path = "../trinity-comfy" }

[[bin]]
name = "trinity-sidecar"
path = "src/main.rs"
