[package]
name = "trinity-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Trinity ID AI OS — PersonaPlex, audio-to-audio, Ask Pete"

[dependencies]
# Trinity ecosystem
trinity-protocol = { path = "../trinity-protocol" }
rodio.workspace = true
cpal.workspace = true

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }
tracing.workspace = true

[dev-dependencies]
