[package]
name = "trinity-first-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = "0.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
